tests/neg/i11253.check
-- Error: tests/neg/i11253.scala:5:5 -----------------------------------------------------------------------------------
5 |enum E1(val t: String) extends Enum[T], T { case X extends E1("xxx") } // error
  |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |enum class E1 extends Enum[T], but the type argument T is not the same as E1
-- Error: tests/neg/i11253.scala:9:5 -----------------------------------------------------------------------------------
9 |enum E2 extends Enum[Nothing] { case X } // error
  |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |enum class E2 extends Enum[Nothing], but the type argument Nothing is not the same as E2
-- Error: tests/neg/i11253.scala:11:5 ----------------------------------------------------------------------------------
11 |enum E3[A](val inner: A) extends Enum[E3[Int]] { // error
   |^
   |enum class E3 extends Enum[E3[Int]], but the type argument E3[Int] is not the same as E3[A]
   |
12 |  case X extends E3[String]("hello")
13 |}
-- Error: tests/neg/i11253.scala:17:5 ----------------------------------------------------------------------------------
17 |enum E5[+A] extends Enum[E5[?]] { case X extends E5[Nothing] } // error
   |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |enum class E5 extends Enum[E5[?]], but the type argument E5[?] is not the same as E5[A]
-- Error: tests/neg/i11253.scala:19:5 ----------------------------------------------------------------------------------
19 |enum E6[A] extends Enum[E6[?]] { case X extends E6[Unit] } // error
   |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |enum class E6 extends Enum[E6[?]], but the type argument E6[?] is not the same as E6[A]
-- Error: tests/neg/i11253.scala:27:5 ----------------------------------------------------------------------------------
27 |enum E7 extends UBad { case X } // error
   |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |enum class E7 extends Enum[UBad], but the type argument UBad is not the same as E7
-- [E134] Type Error: tests/neg/i11253.scala:29:5 ----------------------------------------------------------------------
29 |enum E8 extends U[E7] { case X } // error
   |     ^
   |     None of the overloaded alternatives of constructor Enum in class Enum with types
   |      [E <: Enum[E]](x$0: String, x$1: Int): Enum[E]
   |      [E <: Enum[E]](): Enum[E]
   |     match type arguments [E7] and arguments ()
